k8s/alb/alb_winwinmarket/k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winwinmarket-deployment
  namespace: test-ingress-alb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: winwinmarket
  replicas: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: winwinmarket
    spec:
      containers:
      - image: hohyun10/winwinmarket_project:v3
        imagePullPolicy: Always
        name: winwinmarket
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: winwinmarket-service
  namespace: test-ingress-alb
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: winwinmarket
